# estuary

./: README.md  base.env  lint.sh  loro_runs.sh  low_quality_train.sh  prompt.json  pyproject.toml  start_jupyter.sh  tensorboard_start.sh  train.sh
notebooks/: alpha_earth.ipynb  augmentations.ipynb  ca_sites.ipynb  clay.ipynb  dino.ipynb  display_muck.ipynb  empa_data.ipynb  empa_sites.ipynb  low_quality.ipynb  mimic_low_quality.ipynb  muck.ipynb  predict.ipynb  timeseries.ipynb
scripts/: clay.py  create_tasks.py  download_usgs.py  export_labels.py  get_closest_usgs.py  plot_sites.py  plot_timeseries.py  run_loro.py  save_normalization_stats.py  tight_grids.py  timeseries.py  train.py  train_clay.py
scripts/display/: empa_overlay.py  plot_timeseries.py
scripts/external_eval/: gpt.py
scripts/labeling/: create_dataset_labels.py  create_tasks.py  create_tasks_unsure.py  export_labels.py
scripts/predict/: cluster_images.py  dataset_timeseries.py  embeddings_clay.py  event_matching.py  timeseries.py
scripts/train/: save_normalization_stats.py  train.py  train_low_quality.py
src/estuary/: __init__.py  clouds.py  constants.py  convert_circle_to_square.py  util.py
src/estuary/clay/: classifier.py  config.py  data.py  module.py
src/estuary/low_quality/: clouds.py  config.py  data.py  module.py  timm_model.py
src/estuary/model/: config.py  data.py  module.py  timm_model.py  transforms.py
src/estuary/util/: bands.py  data.py  img.py  my_logging.py  nn.py  transforms.py
