[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "estuary"
version = "0.1.0"
description = "Repo for estuary remote sensing"
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "cartopy",
    "click",
    "dask",
    "folium",
    "gdal[numpy]",
    "geopandas",
    "matplotlib",
    "numpy",
    "opencv-python-headless",
    "pandas",
    "pillow",
    "rasterio",
    "scikit-learn",
    "scipy",
    "seaborn",
    "shapely",
    "tqdm",
    "xarray",
]
[dependency-groups]
dev = [
  "ruff",
  "ipython",
  "jupyterlab",
  "tensorboard",
]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# On top of the default `select` (`E4`, E7`, `E9`, and `F`), enable flake8-bugbear (`B`) and flake8-quotes (`Q`).
extend-select = ["B", "Q", "I"]
